# Algoritmusok

./: CMakeLists.txt  README.md
docs/: Lengyel.md  MergeSort.md  QuickSort.md  index.md  lengyel.md  merge_sort.md  quick_sort.md
src/: Lengyel.cpp  MergeSort.cpp  QuickSort.cpp  S1L.cpp  merge_sort.cpp  print_vector.hpp  quick_sort.cpp
